Se añadió alerta cuando hay error en la parte del servidor (API)

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -1,11 +1,28 @@
-.actions-menu{
+.actions-menu {
     padding: 40px 30px;
-}
-
-.form-row{
-    padding: 20px 0px;
-}
-
-.actions-menu h1{
+  }
+  
+  .actions-menu h1 {
     margin-bottom: 20px;
-}
+  }
+  
+  .form-row {
+    padding: 20px 0px; 
+  }
+  
+  .lista-vacia {
+    text-align: center;
+  }
+  
+  .actions-menu-content {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .actions-menu-content > button.btn.btn-primary {
+    height: 40px;
+  }
+  
+  .alert {
+    display: none;
+  }
